removed jdk1.1 collections.